--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,113 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>API</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style>
+        .bloco-chamada{
+            background: #FAFAFA;
+            padding: 20px;
+            border-radius: 5px;
+        }
+
+        .subtitulo{
+            color: green;
+        }
+
+        .bloco-codigo{
+            background: black;
+            padding: 10px;
+            border-radius: 5px;
+            color: greenyellow;
+        }
+    </style>
 </head>
 <body>
-    <h1>ola mundo</h1>
+    <div class="container">
+        <div class="mt-2 blockquote">
+            <h3 class="text-center">API CRUD DE PRODUTOS</h3>
+        </div>
+        <div class="bloco-chamada">
+            <h6 class="subtitulo">
+                <b>Listar: </b>
+            </h6>
+            <small>Chamada: <br> </small>
+            <div class="mt-2 mb-2">
+                <code class="bloco-codigo d-block">
+                    https://estoquemiza.herokuapp.com/listar
+                </code>
+            </div>
+            <div class="mt-3 row">
+                <div class="col text-center resultados">
+                    <small>Resultado esperado:</small>
+                    <div class="mt-2 mb-2 text-start">
+                        <code class="bloco-codigo d-block">
+                            {
+                                "codigo": 200,
+                                "mensagem": [
+                                    {
+                                        "codigo": 1,
+                                        "descricao": "descricao do produto 1",
+                                        "nome": "nome produto 1",
+                                        "quantidade": 13,
+                                        "ultima_alteracao": "Fri, 17 Jun 2022 16:42:47 GMT",
+                                        "valor": "169.00"
+                                    }
+                                ]
+                            }
+                        </code>
+                    </div>
+                </div>
+              </div>
+        </div>
+        <br>
+        <div class="bloco-chamada">
+            <h6 class="subtitulo">
+                <b>Cadastrar: </b>
+            </h6>
+            <small>Chamada: <br> </small>
+            <div class="mt-2 mb-2">
+                <code class="bloco-codigo d-block">
+                    https://estoquemiza.herokuapp.com/listar
+                </code>
+            </div>
+            <div class="mt-3 row">
+                <div class="col text-center resultados">
+                    <small>Resultado esperado:</small>
+                    <div class="mt-2 mb-2 text-start">
+                        <code class="bloco-codigo d-block">
+                            {
+                                "codigo": 200,
+                                "mensagem": [
+                                    {
+                                        "codigo": 1,
+                                        "descricao": "descricao do produto 1",
+                                        "nome": "nome produto 1",
+                                        "quantidade": 13,
+                                        "ultima_alteracao": "Fri, 17 Jun 2022 16:42:47 GMT",
+                                        "valor": "169.00"
+                                    }
+                                ]
+                            }
+                        </code>
+                    </div>
+                </div>
+                <div class="col text-center resultados">
+                    <small>Possível erro:</small>
+                    <div class="mt-2 mb-2 text-start">
+                        <code class="bloco-codigo d-block">
+                            {
+                                "codigo":404,
+                                "data":"Erro de requisição."
+                            }
+                        </code>
+                    </div>
+                </div>
+              </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
